fix relinking issue
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35001 52c4871e-980c-0410-b1e0-e73912ce01f8

Former-commit-id: a2644be97e16a44901550683badb7bd5d146e9a1

--- a/src/router/zfs/Makefile
+++ b/src/router/zfs/Makefile
@@ -20,11 +20,11 @@ all: modules
 
 configure:
 	cd tools/libtirpc && ./bootstrap
-	cd tools/libtirpc && ./configure --host=$(ARCH)-linux CFLAGS="$(COPTS) $(MIPS16_OPT) -DNEED_PRINTF" LDFLAGS="-L$(TOP)/zlib" --disable-gssapi --disable-static --prefix=/usr
+	cd tools/libtirpc && ./configure --enable-fast-install --with-sysroot=yes --libdir=/usr/lib --host=$(ARCH)-linux CFLAGS="$(COPTS) $(MIPS16_OPT) -DNEED_PRINTF" LDFLAGS="-L$(TOP)/zlib" --disable-gssapi --disable-static --prefix=/usr
 	make -C tools/libtirpc
 # for bootstrapping
 	cd tools && ./autogen.sh
-	cd tools && ./configure --host=$(ARCH)-linux CFLAGS="$(COPTS) $(MIPS16_OPT) -DNEED_PRINTF -I$(TOP)/zlib -I$(TOP)/zfs/tools/include -I$(TOP)/zfs/tools/libtirpc  -I$(TOP)/zfs/tools/libtirpc/tirpc" LDFLAGS="-L$(TOP)/zlib -L$(TOP)/e2fsprogs/lib/uuid -L$(TOP)/zfs/tools/libtirpc/src/.libs -L$(TOP)/util-linux/.libs" --prefix=/usr
+	cd tools && ./configure --enable-fast-install --with-sysroot=yes --libdir=/usr/lib --host=$(ARCH)-linux CFLAGS="$(COPTS) $(MIPS16_OPT) -DNEED_PRINTF -I$(TOP)/zlib -I$(TOP)/zfs/tools/include -I$(TOP)/zfs/tools/libtirpc  -I$(TOP)/zfs/tools/libtirpc/tirpc" LDFLAGS="-L$(TOP)/zlib -L$(TOP)/e2fsprogs/lib/uuid -L$(TOP)/zfs/tools/libtirpc/src/.libs -L$(TOP)/util-linux/.libs" --prefix=/usr
 
 modules:
 	$(MAKE) -C $(LINUXDIR) SUBDIRS=`pwd` CROSS_COMPILE="ccache $(ARCH)-linux-uclibc-" O=$(LINUXDIR) CONFIG_ZFS=m $@
@@ -35,7 +35,6 @@ install:
 	rm -f $(INSTALLDIR)/lib/modules/$(KERNELRELEASE)/modules.*
 	make -C tools/libtirpc install DESTDIR=$(INSTALLDIR)
 	make -C tools install DESTDIR=$(INSTALLDIR)
-	mv -f $(INSTALLDIR)/usr/lib64/* $(INSTALLDIR)/usr/lib
 	rm -rf $(INSTALLDIR)/usr/include
 	rm -rf $(INSTALLDIR)/usr/lib/pkgconfig
 	rm -rf $(INSTALLDIR)/usr/share
