workaround for r9000 led
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35014 52c4871e-980c-0410-b1e0-e73912ce01f8

Former-commit-id: c6d46b1660bd56d6caf10ea740fa982aa4ec34d8

--- a/src/router/services/Makefile
+++ b/src/router/services/Makefile
@@ -308,6 +308,9 @@ endif
 ifeq ($(CONFIG_DNSCRYPT),y)
 CFLAGS_EXTRA += -DHAVE_DNSCRYPT
 endif
+ifeq ($(CONFIG_DNSCRYPT_BLACKLIST),y)
+CFLAGS_EXTRA += -DHAVE_DNSCRYPT_BLACKLIST
+endif
 ifeq ($(CONFIG_POWERSAVE),y)
 CFLAGS_EXTRA += -DHAVE_POWERSAVE
 OBJS += powersave.o
