--- a/src/linux/universal/linux-3.18/Makefile
+++ b/src/linux/universal/linux-3.18/Makefile
@@ -1,7 +1,7 @@
 VERSION = 3
 PATCHLEVEL = 18
-SUBLEVEL = 94
-EXTRAVERSION =
+SUBLEVEL = 95
+EXTRAVERSION = -rc1
 NAME = Diseased Newt
 
 # *DOCUMENTATION*
