--- a/src/linux/universal/linux-3.18/arch/arm/boot/dts/armada-385-linksys-rango.dtsi
+++ b/src/linux/universal/linux-3.18/arch/arm/boot/dts/armada-385-linksys-rango.dtsi
@@ -137,6 +137,8 @@
 			flash@d0000 {
 				status = "okay";
 				num-cs = <1>;
+				nand-ecc-strength = <4>;
+				nand-ecc-step-size = <512>;
 				marvell,nand-keep-config;
 				marvell,nand-enable-arbiter;
 				nand-on-flash-bbt;
