--- a/src/router/services/Makefile
+++ b/src/router/services/Makefile
@@ -712,6 +712,9 @@ endif
 ifeq ($(CONFIG_WR941V6),y)
 CFLAGS_EXTRA += -DHAVE_WR941V6
 endif
+ifeq ($(CONFIG_WR940V4),y)
+CFLAGS_EXTRA += -DHAVE_WR940V4
+endif
 ifeq ($(CONFIG_AC622),y)
 CFLAGS_EXTRA += -DHAVE_AC622
 endif
