--- a/src/linux/universal/linux-4.9/arch/arm/boot/dts/Makefile
+++ b/src/linux/universal/linux-4.9/arch/arm/boot/dts/Makefile
@@ -954,7 +954,8 @@ dtb-$(CONFIG_MACH_ARMADA_38X) += \
 	armada-388-clearfog.dtb \
 	armada-388-db.dtb \
 	armada-388-gp.dtb \
-	armada-388-rd.dtb
+	armada-388-rd.dtb \
+	armada-385-turris-omnia.dtb
 dtb-$(CONFIG_MACH_ARMADA_39X) += \
 	armada-398-db.dtb
 dtb-$(CONFIG_MACH_ARMADA_XP) += \
