--- a/src/router/rc/Makefile
+++ b/src/router/rc/Makefile
@@ -1027,6 +1027,7 @@ endif
 ifeq ($(CONFIG_VENTANA),y)
 	install update-prepare.sh $(INSTALLDIR)/usr/sbin	
 	install update-after-pivot.sh $(INSTALLDIR)/usr/sbin	
+	install ldd.sh $(INSTALLDIR)/usr/sbin
 endif
 ifneq ($(CONFIG_TW6600),y)
 ifeq ($(CONFIG_DIST),"micro")
