--- a/src/linux/universal/linux-4.14/net/ipv6/netfilter/Kconfig
+++ b/src/linux/universal/linux-4.14/net/ipv6/netfilter/Kconfig
@@ -69,6 +69,15 @@ config NFT_FIB_IPV6
 	  multicast or blackhole.
 
 endif # NF_TABLES_IPV6
+
+config NF_FLOW_TABLE_IPV6
+	tristate "Netfilter flow table IPv6 module"
+	depends on NF_FLOW_TABLE
+	help
+	  This option adds the flow table IPv6 support.
+
+	  To compile it as a module, choose M here.
+
 endif # NF_TABLES
 
 config NF_DUP_IPV6
