--- a/src/router/Makefile.ventana
+++ b/src/router/Makefile.ventana
@@ -475,10 +475,18 @@ endif
 	mkdir $(TARGETDIR)/boot
 	mkimage -A arm -O linux -T kernel -C none -a 0x10008000 -e 0x10008000 -n 'DD-WRT' -d $(LINUXDIR)/arch/arm/boot/zImage $(ARCH)-uclibc/uImage
 	cp $(ARCH)-uclibc/uImage $(TARGETDIR)/boot 
+	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw5904.dtb $(TARGETDIR)/boot
+	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw551x.dtb $(TARGETDIR)/boot
+	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw552x.dtb $(TARGETDIR)/boot
+	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw553x.dtb $(TARGETDIR)/boot
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw54xx.dtb $(TARGETDIR)/boot
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw53xx.dtb $(TARGETDIR)/boot
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw52xx.dtb $(TARGETDIR)/boot
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw51xx.dtb $(TARGETDIR)/boot
+	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6dl-gw5904.dtb $(TARGETDIR)/boot
+	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6dl-gw551x.dtb $(TARGETDIR)/boot
+	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6dl-gw552x.dtb $(TARGETDIR)/boot
+	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6dl-gw553x.dtb $(TARGETDIR)/boot
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6dl-gw54xx.dtb $(TARGETDIR)/boot
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6dl-gw53xx.dtb $(TARGETDIR)/boot
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6dl-gw52xx.dtb $(TARGETDIR)/boot
