--- a/src/linux/universal/linux-4.9/arch/arm/boot/dts/Makefile
+++ b/src/linux/universal/linux-4.9/arch/arm/boot/dts/Makefile
@@ -392,7 +392,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6q-gw551x.dtb \
 	imx6q-gw552x.dtb \
 	imx6q-gw553x.dtb \
-+	imx6q-gw5904.dtb \
+	imx6q-gw5904.dtb \
 	imx6q-h100.dtb \
 	imx6q-hummingboard.dtb \
 	imx6q-icore-rqs.dtb \
