fix missconfigure issue
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35209 52c4871e-980c-0410-b1e0-e73912ce01f8

Former-commit-id: f44ac1e0a4563af50374fa51c269e5a62a7328b6

--- a/src/router/screen/osdef.h.in
+++ b/src/router/screen/osdef.h.in
@@ -28,7 +28,9 @@
  ****************************************************************
  */
 
+#if 0
 extern int   printf __P((char *, ...));
+#endif
 extern int   fprintf __P((FILE *, char *, ...));
 extern int   sprintf __P((char *, char *, ...));
 #ifdef USEVARARGS
