--- a/src/linux/universal/linux-4.14/arch/arm/boot/dts/imx6qdl-gw5904.dtsi
+++ b/src/linux/universal/linux-4.14/arch/arm/boot/dts/imx6qdl-gw5904.dtsi
@@ -237,6 +237,11 @@
 		pagesize = <16>;
 	};
 
+	hwmon: gsc@29 {
+		compatible = "gw,gsp";
+		reg = <0x29>;
+	};
+
 	dts1672: rtc@68 {
 		compatible = "dallas,ds1672";
 		reg = <0x68>;
