add more boards
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35306 52c4871e-980c-0410-b1e0-e73912ce01f8

Former-commit-id: 62668748f3f8241e6e6e2076c48b6b4c804cba0e

--- a/src/linux/universal/linux-4.9/arch/arm/boot/dts/imx6q-gw560x.dts
+++ b/src/linux/universal/linux-4.9/arch/arm/boot/dts/imx6q-gw560x.dts
@@ -46,10 +46,14 @@
  */
 
 /dts-v1/;
-#include "imx6dl.dtsi"
-#include "imx6qdl-gw5904.dtsi"
+#include "imx6q.dtsi"
+#include "imx6qdl-gw560x.dtsi"
 
 / {
-	model = "Gateworks Ventana i.MX6 DualLite/Solo GW5904";
-	compatible = "gw,imx6dl-gw5904", "gw,ventana", "fsl,imx6dl";
+	model = "Gateworks Ventana i.MX6 Dual/Quad GW560X";
+	compatible = "gw,imx6q-gw560x", "gw,ventana", "fsl,imx6q";
+};
+
+&sata {
+	status = "okay";
 };
