--- a/src/linux/universal/linux-4.9/arch/arm/boot/dts/imx6dl-gw560x.dts
+++ b/src/linux/universal/linux-4.9/arch/arm/boot/dts/imx6dl-gw560x.dts
@@ -47,9 +47,9 @@
 
 /dts-v1/;
 #include "imx6dl.dtsi"
-#include "imx6qdl-gw5904.dtsi"
+#include "imx6qdl-gw560x.dtsi"
 
 / {
-	model = "Gateworks Ventana i.MX6 DualLite/Solo GW5904";
-	compatible = "gw,imx6dl-gw5904", "gw,ventana", "fsl,imx6dl";
+	model = "Gateworks Ventana i.MX6 DualLite/Solo GW560X";
+	compatible = "gw,imx6dl-gw560x", "gw,ventana", "fsl,imx6dl";
 };
