add more boards
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35307 52c4871e-980c-0410-b1e0-e73912ce01f8

Former-commit-id: 37b510fb4216b9208710c399db7e55a7e8e32c32

--- a/src/router/Makefile.ventana
+++ b/src/router/Makefile.ventana
@@ -20,7 +20,7 @@ endif
 #
 # Paths
 
-CONFIG_NOOPT=y
+#CONFIG_NOOPT=y
 OPENSER_MODULES := sl tm rr maxfwd usrloc registrar dbtext textops exec auth auth_db nathelper
 OPENSER_MODULE_FILES := $(foreach module,$(OPENSER_MODULES),openser/modules/$(module)/$(module).so)
 OPENSSL_NO_CIPHERS:= no-idea no-md2 no-mdc2 no-rc5 no-sha0 no-rmd160 no-aes192
@@ -475,6 +475,8 @@ endif
 	mkdir $(TARGETDIR)/boot
 	mkimage -A arm -O linux -T kernel -C none -a 0x10008000 -e 0x10008000 -n 'DD-WRT' -d $(LINUXDIR)/arch/arm/boot/zImage $(ARCH)-uclibc/uImage
 	cp $(ARCH)-uclibc/uImage $(TARGETDIR)/boot 
+	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw610x.dtb $(TARGETDIR)/boot
+	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw5903.dtb $(TARGETDIR)/boot
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw5904.dtb $(TARGETDIR)/boot
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw551x.dtb $(TARGETDIR)/boot
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw552x.dtb $(TARGETDIR)/boot
@@ -483,6 +485,8 @@ endif
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw53xx.dtb $(TARGETDIR)/boot
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw52xx.dtb $(TARGETDIR)/boot
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6q-gw51xx.dtb $(TARGETDIR)/boot
+	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6dl-gw610x.dtb $(TARGETDIR)/boot
+	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6dl-gw5903.dtb $(TARGETDIR)/boot
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6dl-gw5904.dtb $(TARGETDIR)/boot
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6dl-gw551x.dtb $(TARGETDIR)/boot
 	-cp $(LINUXDIR)/arch/arm/boot/dts/imx6dl-gw552x.dtb $(TARGETDIR)/boot
