another translation bug
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35313 52c4871e-980c-0410-b1e0-e73912ce01f8

Former-commit-id: 524750924e1fda79e77826b9c4038c0a9dd94731

--- a/src/router/kromo/dd-wrt/Makefile
+++ b/src/router/kromo/dd-wrt/Makefile
@@ -630,6 +630,9 @@ ifeq ($(CONFIG_TMK),y)
 	cp -f kmt/defaults/config/* $(INSTALLDIR)/etc/config
 	mkdir -p $(INSTALLDIR)/sbin
 	cp -f kmt/defaults/sbin/* $(INSTALLDIR)/sbin/
+ifeq ($(CONFIG_VENTANA),y)
+	rm $(INSTALLDIR)/etc/config/kmtdefaults.startup		
+endif
 endif
 ifeq ($(CONFIG_BKM),y)
 	cp -f bkm/SuperChannel.asp $(INSTALLDIR)/www
