clean to be safe
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35393 52c4871e-980c-0410-b1e0-e73912ce01f8

Former-commit-id: ffa13b9a3e39ab112d82c18bb1916cb4ff7b8c61

--- a/src/router/libutils/Makefile
+++ b/src/router/libutils/Makefile
@@ -1464,7 +1464,7 @@ endif
 
 HFLAGS := $(CFLAGS)
 CFLAGS += $(COPTS)
-all: libshutils.so libutils.so libwireless.so libqos.so $(ADDLIB)
+all: clean libshutils.so libutils.so libwireless.so libqos.so $(ADDLIB)
 
 install: all
 ifeq ($(CONFIG_XSCALE),y)
