fix some syntax bug
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35427 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/linux/universal/linux-4.9/arch/arm/boot/dts/armada-385-linksys.dtsi
+++ b/src/linux/universal/linux-4.9/arch/arm/boot/dts/armada-385-linksys.dtsi
@@ -81,6 +81,11 @@
 				};
 			};
 
+			rtc@a3800 {
+				/* No crystal connected to the internal RTC */
+				status = "disabled";
+			};
+
 			/* J10: VCC, NC, RX, NC, TX, GND  */
 			serial@12000 {
 				status = "okay";
@@ -367,7 +372,3 @@
 	status = "disabled";
 };
 
-&rtc {
-	/* No crystal connected to the internal RTC */
-	status = "disabled";
-};
