--- a/src/router/nmap/mswin32/nsis/Nmap.nsi.in
+++ b/src/router/nmap/mswin32/nsis/Nmap.nsi.in
@@ -45,6 +45,7 @@
   !echo "Inner invocation"                  ; just to see what's going on
   OutFile "$%TEMP%\tempinstaller.exe"       ; not really important where this is
   SetCompress off                           ; for speed
+  RequestExecutionLevel user
 !else
   !echo "Outer invocation"
 
@@ -70,10 +71,10 @@
 
   OutFile "NmapInstaller.exe"
   SetCompressor /SOLID /FINAL lzma
-!endif
 
   ;Required for removing shortcuts
   RequestExecutionLevel admin
+!endif
 
   ;Default installation folder
   InstallDir "$PROGRAMFILES\Nmap"
@@ -82,6 +83,7 @@
   InstallDirRegKey HKCU "Software\Nmap" ""
 
   !define VERSION @@VERSION@@
+  !define STAGE_DIR ..\nmap-${VERSION}
   VIProductVersion @@VIPRODUCTVERSION@@
   VIAddVersionKey /LANG=1033 "FileVersion" "${VERSION}"
   VIAddVersionKey /LANG=1033 "ProductName" "Nmap"
@@ -216,26 +218,27 @@ Section "Nmap Core Files" SecCore
   SetOutPath "$INSTDIR"
 
   SetOverwrite on
-  File ..\..\CHANGELOG
-  File ..\..\COPYING
-  File ..\..\nmap-mac-prefixes
-  File ..\..\nmap-os-db
-  File ..\..\nmap-payloads
-  File ..\..\nmap-protocols
-  File ..\..\nmap-rpc
-  File ..\..\nmap-service-probes
-  File ..\..\nmap-services
-  File ..\Release\nmap.exe
-  File ..\Release\nse_main.lua
-  File ..\..\docs\nmap.xsl
-  File ..\nmap_performance.reg
-  File ..\..\README-WIN32
-  File ..\..\docs\3rd-party-licenses.txt
-  File /r /x .svn ..\..\docs\licenses
+  File ${STAGE_DIR}\CHANGELOG
+  File ${STAGE_DIR}\COPYING
+  File ${STAGE_DIR}\nmap-mac-prefixes
+  File ${STAGE_DIR}\nmap-os-db
+  File ${STAGE_DIR}\nmap-payloads
+  File ${STAGE_DIR}\nmap-protocols
+  File ${STAGE_DIR}\nmap-rpc
+  File ${STAGE_DIR}\nmap-service-probes
+  File ${STAGE_DIR}\nmap-services
+  File ${STAGE_DIR}\nmap.exe
+  File ${STAGE_DIR}\nse_main.lua
+  File ${STAGE_DIR}\nmap.xsl
+  File ${STAGE_DIR}\nmap_performance.reg
+  File ${STAGE_DIR}\README-WIN32
+  File ${STAGE_DIR}\3rd-party-licenses.txt
+  File /r /x .svn ${STAGE_DIR}\licenses
+  File libssh2.dll
   File libeay32.dll
   File ssleay32.dll
-  File /r /x mswin32 /x .svn /x ncat ..\..\scripts
-  File /r /x mswin32 /x .svn ..\Release\nselib
+  File /r /x mswin32 /x .svn /x ncat ${STAGE_DIR}\scripts
+  File /r /x mswin32 /x .svn ${STAGE_DIR}\nselib
   File ..\icon1.ico
 
   ;Store installation folder
@@ -254,7 +257,7 @@ SectionEnd
 Section "Npcap @@NPCAP_VERSION@@" SecNpcap
   SetOutPath "$INSTDIR"
   SetOverwrite on
-  File ..\npcap-@@NPCAP_VERSION@@.exe
+  File ..\npcap-@@NPCAP_VERSION@@-oem.exe
   ; If the Nmap installer was launched using /S then pass some arguments to Npcap
   IfSilent npcap_silent npcap_loud
   npcap_silent:
@@ -265,30 +268,30 @@ Section "Npcap @@NPCAP_VERSION@@" SecNpcap
     StrCmp $2 "NO" 0 NoSkipNPFStartup
     StrCpy $1 "/NPFSTARTUP=NO $1"
     NoSkipNPFStartup:
-    ExecWait '"$INSTDIR\npcap-@@NPCAP_VERSION@@.exe" $1 /S /winpcap_mode=no'
+    ExecWait '"$INSTDIR\npcap-@@NPCAP_VERSION@@-oem.exe" $1 /S /winpcap_mode=no'
     Goto delete_npcap
   npcap_loud:
-    ExecWait '"$INSTDIR\npcap-@@NPCAP_VERSION@@.exe" /winpcap_mode=no'
+    ExecWait '"$INSTDIR\npcap-@@NPCAP_VERSION@@-oem.exe" /winpcap_mode=no'
   delete_npcap:
-  Delete "$INSTDIR\npcap-@@NPCAP_VERSION@@.exe"
+  Delete "$INSTDIR\npcap-@@NPCAP_VERSION@@-oem.exe"
 SectionEnd
 
 Section "Network Performance Improvements" SecPerfRegistryMods
   SetOutPath "$INSTDIR"
   SetOverwrite on
-  File ..\nmap_performance.reg
+  File ${STAGE_DIR}\nmap_performance.reg
   Exec 'regedt32 /S "$INSTDIR\nmap_performance.reg"'
 SectionEnd
 
 Section "Zenmap (GUI Frontend)" SecZenmap
   SetOutPath "$INSTDIR"
   SetOverwrite on
-  File ..\nmap-${VERSION}\zenmap.exe
-  File ..\nmap-${VERSION}\ZENMAP_README
-  File ..\nmap-${VERSION}\COPYING_HIGWIDGETS
-  File ..\nmap-${VERSION}\python27.dll
-  File /r ..\nmap-${VERSION}\share
-  File /r ..\nmap-${VERSION}\py2exe
+  File ${STAGE_DIR}\zenmap.exe
+  File ${STAGE_DIR}\ZENMAP_README
+  File ${STAGE_DIR}\COPYING_HIGWIDGETS
+  File ${STAGE_DIR}\python27.dll
+  File /r ${STAGE_DIR}\share
+  File /r ${STAGE_DIR}\py2exe
   StrCpy $zenmapset "true"
   Call vcredist2008installer
   Call create_uninstaller
@@ -297,8 +300,8 @@ SectionEnd
 Section "Ncat (Modern Netcat reincarnation)" SecNcat
   SetOutPath "$INSTDIR"
   SetOverwrite on
-  File ..\nmap-${VERSION}\ncat.exe
-  File ..\nmap-${VERSION}\ca-bundle.crt
+  File ${STAGE_DIR}\ncat.exe
+  File ${STAGE_DIR}\ca-bundle.crt
   Call vcredist2013installer
   Call create_uninstaller
 SectionEnd
@@ -306,10 +309,10 @@ SectionEnd
 Section "Ndiff (Scan comparison tool)" SecNdiff
   SetOutPath "$INSTDIR"
   SetOverwrite on
-  File ..\nmap-${VERSION}\ndiff.exe
-  File ..\nmap-${VERSION}\NDIFF_README
-  File ..\nmap-${VERSION}\python27.dll
-  File /r ..\nmap-${VERSION}\py2exe
+  File ${STAGE_DIR}\ndiff.exe
+  File ${STAGE_DIR}\NDIFF_README
+  File ${STAGE_DIR}\python27.dll
+  File /r ${STAGE_DIR}\py2exe
   Call vcredist2008installer
   Call create_uninstaller
 SectionEnd
@@ -317,7 +320,7 @@ SectionEnd
 Section "Nping (Packet generator)" SecNping
   SetOutPath "$INSTDIR"
   SetOverwrite on
-  File ..\nmap-${VERSION}\nping.exe
+  File ${STAGE_DIR}\nping.exe
   Call vcredist2013installer
   Call create_uninstaller
 SectionEnd
@@ -325,7 +328,7 @@ SectionEnd
 Section "nmap-update (updater for architecture-independent files)" SecNmapUpdate
   SetOutPath "$INSTDIR"
   SetOverwrite on
-  File ..\nmap-${VERSION}\nmap-update.exe
+  File ${STAGE_DIR}\nmap-update.exe
   Call vcredist2013installer
   Call create_uninstaller
 SectionEnd
@@ -347,7 +350,7 @@ Function vcredist2013installer
   ;If VC++ 2013 runtimes are not installed...
   vcredist_silent_install:
     DetailPrint "Installing Microsoft Visual C++ 2013 Redistributable"
-    File ..\nmap-${VERSION}\vcredist_x86.exe
+    File ${STAGE_DIR}\vcredist_x86.exe
     ExecWait '"$INSTDIR\vcredist_x86.exe" /q' $0
     ;Check for successful installation of our vcredist_x86.exe...
     ReadRegStr $0 HKLM "SOFTWARE\Microsoft\DevDiv\vc\Servicing\12.0\RuntimeMinimum" "Install"
@@ -383,7 +386,7 @@ Function vcredist2008installer
   ;If VC++ 2008 runtimes are not installed...
   vcredist2008_silent_install:
     DetailPrint "Installing Microsoft Visual C++ 2008 Redistributable"
-    File ..\nmap-${VERSION}\vcredist2008_x86.exe
+    File ${STAGE_DIR}\vcredist2008_x86.exe
     ExecWait '"$INSTDIR\vcredist2008_x86.exe" /q' $0
     ;Check for successful installation of our 2008 version of vcredist_x86.exe...
     ReadRegStr $0 HKLM "SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\{9BE518E6-ECC6-35A9-88E4-87755C07200F}" "DisplayName"
@@ -408,6 +411,9 @@ Function create_uninstaller
   ; Register Nmap with add/remove programs
   WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\Nmap" "DisplayName" "Nmap ${VERSION}"
   WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\Nmap" "DisplayVersion" "${VERSION}"
+  WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\Nmap" "Publisher" "Nmap Project"
+  WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\Nmap" "URLInfoAbout" "https://nmap.org/"
+  WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\Nmap" "URLUpdateInfo" "https://nmap.org/download.html"
   WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\Nmap" "UninstallString" '"$INSTDIR\uninstall.exe"'
   WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\Nmap" "DisplayIcon" '"$INSTDIR\icon1.ico"'
   WriteRegDWORD HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\Nmap" "NoModify" 1
@@ -547,6 +553,7 @@ Section "Uninstall"
   Delete "$INSTDIR\nse_main.lua"
   Delete "$INSTDIR\README-WIN32"
   Delete "$INSTDIR\icon1.ico"
+  Delete "$INSTDIR\libssh2.dll"
   Delete "$INSTDIR\libeay32.dll"
   Delete "$INSTDIR\ssleay32.dll"
   Delete "$INSTDIR\npcap-*.exe"
