--- a/src/router/nvram/Makefile
+++ b/src/router/nvram/Makefile
@@ -33,7 +33,7 @@ CFLAGS	+= -I. -I$(TOP)/shared
 
 #CFLAGS	+= -g -DDEBUG
 CFLAGS	+= -s $(COPTS) $(MIPS16_OPT) -fPIC
-LDFLAGS += -L.
+LDFLAGS += -L. -L$(TOP)/libutils -lshutils
 ifeq ($(ARCH),powerpc)
 #CFLAGS  += -DHAVE_MAGICBOX -fpic
 endif
