fix dep. but usually i need to rewrite this here
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35503 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/nvram/Makefile
+++ b/src/router/nvram/Makefile
@@ -33,7 +33,7 @@ CFLAGS	+= -I. -I$(TOP)/shared
 
 #CFLAGS	+= -g -DDEBUG
 CFLAGS	+= -s $(COPTS) $(MIPS16_OPT) -fPIC
-LDFLAGS += -L. -L$(TOP)/libutils -lshutils
+LDFLAGS += -L.
 ifeq ($(ARCH),powerpc)
 #CFLAGS  += -DHAVE_MAGICBOX -fpic
 endif
