--- a/src/router/mstp/Makefile
+++ b/src/router/mstp/Makefile
@@ -11,7 +11,7 @@ CTLSOURCES = ctl_main.c ctl_socket_client.c
 CTLOBJECTS = $(CTLSOURCES:.c=.o)
 
 CFLAGS += $(COPTS) $(MIPS16_OPT) -D_REENTRANT -D__LINUX__ -DVERSION=$(version) -I. \
-          -D_GNU_SOURCE -D__LIBC_HAS_VERSIONSORT__ -DNEED_PRINTF
+          -D_GNU_SOURCE -DNEED_PRINTF -DMSTPD_PID_FILE='"/var/run/mstpd.pid"'
 
 all: mstpd mstpctl
 
