--- a/src/linux/universal/linux-4.9/Makefile
+++ b/src/linux/universal/linux-4.9/Makefile
@@ -1,7 +1,7 @@
 VERSION = 4
 PATCHLEVEL = 9
-SUBLEVEL = 91
-EXTRAVERSION =
+SUBLEVEL = 92
+EXTRAVERSION = -rc1
 NAME = Roaring Lionus
 
 # *DOCUMENTATION*
