to catch curious bugs we should define this special situation as error since local stack pointers should never be returned
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35676 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/router/nvram/Makefile
+++ b/src/router/nvram/Makefile
@@ -29,7 +29,7 @@ CFLAGS	+= -I. -I$(SRCBASE)/include.v23 -Wall
 endif
 endif
 
-CFLAGS	+= -I. -I$(TOP)/shared
+CFLAGS	+= -I. -I$(TOP)/shared -Werror=return-local-addr
 
 #CFLAGS	+= -g -DDEBUG
 CFLAGS	+= -s $(COPTS) $(MIPS16_OPT) -fPIC
