--- a/src/router/httpd/Makefile
+++ b/src/router/httpd/Makefile
@@ -65,7 +65,13 @@ ifneq ($(wildcard $(SRCBASE)/cy_conf.mak),)
   include $(SRCBASE)/cy_conf.mak
 endif
 
-COPTS += $(MIPS16_OPT) -D_GNU_SOURCE  $(call cc-option,-Werror=return-local-addr)
+COPTS += $(MIPS16_OPT) -D_GNU_SOURCE
+
+cc-option = $(shell if $(CC) $(1) -S -o /dev/null -xc /dev/null \
+             > /dev/null 2>&1; then echo "$(1)"; else echo "$(2)"; fi ;)
+COPTS +=$(call cc-option,-Werror=return-local-addr,)
+
+
 # -Werror=maybe-uninitialized -Werror=int-conversion -Werror=array-bounds
 
 BCFLAGS	= $(COPTS)  -fPIC -DMEMLEAK_OVERRIDE
