add missing dtsi
git-svn-id: svn://svn.dd-wrt.com/DD-WRT@35700 52c4871e-980c-0410-b1e0-e73912ce01f8

--- a/src/linux/universal/linux-4.14/arch/arm/boot/dts/qcom-ipq8064-asrockg10.dts
+++ b/src/linux/universal/linux-4.14/arch/arm/boot/dts/qcom-ipq8064-asrockg10.dts
@@ -27,7 +27,7 @@
 	};
 
 	chosen {
-		bootargs = "earlyprintk rootfstype=squashfs noinitrd";
+		bootargs = "rootfstype=squashfs noinitrd";
 		linux,stdout-path = "serial0:115200n8";
 	};
 
