--- a/src/linux/universal/linux-4.14/arch/arm/boot/dts/qcom-ipq8064-ea8500.dts
+++ b/src/linux/universal/linux-4.14/arch/arm/boot/dts/qcom-ipq8064-ea8500.dts
@@ -1,4 +1,4 @@
-#include "qcom-ipq8064-v1.0.dtsi"
+#include "qcom-ipq8064-v2.0.dtsi"
 
 #include <dt-bindings/input/input.h>
 
@@ -24,17 +24,18 @@
 	aliases {
 		serial0 = &gsbi4_serial;
 		mdio-gpio0 = &mdio0;
+
 	};
 
 	chosen {
-		bootargs = "console=ttyMSM0,115200n8 rootfstype=squashfs noinitrd";
+		bootargs = "console=ttyMSM0,115200n8 rootfstype=squashfs noinitrd"; 
 		linux,stdout-path = "serial0:115200n8";
 	};
 
 	soc {
 		pinmux@800000 {
 
-			pinctrl-0 = <&reset_control>;
+			pinctrl-0 = <&switch_reset>;
 			pinctrl-names = "default";
 
 			button_pins: button_pins {
@@ -64,7 +65,7 @@
 				};
 			};
 
-			reset_control: reset_control_pins {
+			switch_reset: switch_reset_pins {
 				mux {
 					pins = "gpio63";
 					function = "gpio";
@@ -73,7 +74,6 @@
 					output-low;
 				};
 			};
-
 
 			mdio0_pins: mdio0_pins {
 				mux {
@@ -109,7 +109,7 @@
 
 			rgmii2_pins: rgmii2_pins {
 				mux {
-					pins = "gpio2", "gpio27", "gpio28", "gpio29", "gpio30", "gpio31", "gpio32",
+					pins = "gpio27", "gpio28", "gpio29", "gpio30", "gpio31", "gpio32",
 					       "gpio51", "gpio52", "gpio59", "gpio60", "gpio61", "gpio62" ;
 					function = "rgmii2";
 					drive-strength = <8>;
@@ -172,7 +172,7 @@
 		pcie1: pci@1b700000 {
 			status = "ok";
 		};
-		
+
 		nand@1ac00000 {
 			status = "ok";
 
@@ -355,11 +355,6 @@
 			};
 		};
 
-		rpm@108000 {
-			pinctrl-0 = <&i2c4_pins>;
-			pinctrl-names = "default";
-		};
-
 		adm_dma: dma@18300000 {
 			status = "ok";
 		};
@@ -390,3 +385,4 @@
 
 /delete-node/ &pcie2_pins;
 /delete-node/ &pcie2;
+ 
