--- a/src/linux/universal/linux-4.14/arch/arm/boot/dts/qcom-ipq8064-tew827.dts
+++ b/src/linux/universal/linux-4.14/arch/arm/boot/dts/qcom-ipq8064-tew827.dts
@@ -27,7 +27,7 @@
 	};
 
 	chosen {
-		bootargs = "earlyprintk rootfstype=squashfs noinitrd";
+		bootargs = "rootfstype=squashfs noinitrd";
 		linux,stdout-path = "serial0:115200n8";
 	};
 
